// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagList renders as a span with custom margins 1`] = `
<DocumentFragment>
  .emotion-12 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-2:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-2:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 48px;
  margin-bottom: 4px;
}

.emotion-3:last-child {
  margin-right: 0;
}

<ul
    class="emotion-12"
  >
    <li
      class="emotion-3"
    >
      <span
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            first label
          </div>
        </div>
      </span>
    </li>
    <li
      class="emotion-3"
    >
      <span
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            second label
          </div>
        </div>
      </span>
    </li>
    <li
      class="emotion-3"
    >
      <span
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            third label
          </div>
        </div>
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as a span with custom size 1`] = `
<DocumentFragment>
  .emotion-3 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-3:last-child {
  margin-right: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-12 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 40px;
  padding: 8px 12px;
  line-height: calc(40px - 2px * 2);
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-2:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-2:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<ul
    class="emotion-12"
  >
    <li
      class="emotion-3"
    >
      <span
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            first label
          </div>
        </div>
      </span>
    </li>
    <li
      class="emotion-3"
    >
      <span
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            second label
          </div>
        </div>
      </span>
    </li>
    <li
      class="emotion-3"
    >
      <span
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            third label
          </div>
        </div>
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as a span with defaults 1`] = `
<DocumentFragment>
  .emotion-12 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-3:last-child {
  margin-right: 0;
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-2:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-2:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<ul
    class="emotion-12"
  >
    <li
      class="emotion-3"
    >
      <span
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            first label
          </div>
        </div>
      </span>
    </li>
    <li
      class="emotion-3"
    >
      <span
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            second label
          </div>
        </div>
      </span>
    </li>
    <li
      class="emotion-3"
    >
      <span
        class="emotion-2"
        data-testid="tag"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            third label
          </div>
        </div>
      </span>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as an anchor with custom margins 1`] = `
<DocumentFragment>
  .emotion-12 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-2:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-2:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 48px;
  margin-bottom: 4px;
}

.emotion-3:last-child {
  margin-right: 0;
}

<ul
    class="emotion-12"
  >
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url1.com"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            first label
          </div>
        </div>
      </a>
    </li>
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url2.com"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            second label
          </div>
        </div>
      </a>
    </li>
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url3.com"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            third label
          </div>
        </div>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as an anchor with custom size 1`] = `
<DocumentFragment>
  .emotion-3 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-3:last-child {
  margin-right: 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-12 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 40px;
  padding: 8px 12px;
  line-height: calc(40px - 2px * 2);
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-2:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-2:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

<ul
    class="emotion-12"
  >
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url1.com"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            first label
          </div>
        </div>
      </a>
    </li>
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url2.com"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            second label
          </div>
        </div>
      </a>
    </li>
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url3.com"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            third label
          </div>
        </div>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`TagList renders as an anchor with defaults 1`] = `
<DocumentFragment>
  .emotion-12 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3 {
  box-sizing: border-box;
  display: inline-block;
  list-style-type: none;
  margin-right: 4px;
  margin-bottom: 4px;
}

.emotion-3:last-child {
  margin-right: 0;
}

.emotion-2 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  border-style: solid;
  border-width: 1px;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-2:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-2:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-2:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-2:disabled {
  background-color: #f0f0f0;
  color: #9c9c9c;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<ul
    class="emotion-12"
  >
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url1.com"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            first label
          </div>
        </div>
      </a>
    </li>
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url2.com"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            second label
          </div>
        </div>
      </a>
    </li>
    <li
      class="emotion-3"
    >
      <a
        class="emotion-2"
        data-testid="tag"
        href="www.url3.com"
      >
        <div
          class="emotion-1"
          wrap="nowrap"
        >
          <div
            class="emotion-0"
            wrap="nowrap"
          >
            third label
          </div>
        </div>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
